--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint",
     "db:push": "drizzle-kit push",
     "db:pull": "drizzle-kit pull",
-    "db:migrate": "drizzle-kit migrate",
-    "db:seed": "drizzle-kit seed"
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@better-auth-kit/seed": "^1.0.12",
     "@hookform/resolvers": "^5.0.1",
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -49,7 +49,9 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.2",
+    "drizzle-seed": "^0.3.1",
     "embla-carousel-react": "^8.6.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
@@ -77,6 +79,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
