feat: Refactor POS page with enhanced functionality and UI improvements
- Replaced barcode input handling with a more robust product search using react-hook-form and zod for validation.
- Introduced a new cart management system with improved item quantity handling and receipt-style display.
- Added customer verification feature with TIN input and selection.
- Implemented global keyboard shortcuts for enhanced user experience.
- Updated layout styles for better responsiveness and usability.
- Enhanced product listing with categories and dynamic filtering.
- Improved overall code structure and readability.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:push": "drizzle-kit push",
     "db:pull": "drizzle-kit pull",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@better-auth-kit/seed": "^1.0.12",
