--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "drizzle-orm": "^0.44.2",
     "drizzle-seed": "^0.3.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
