--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,38 +1,60 @@
 name: Playwright Tests
+
 on:
   push:
     branches:
       - main
   pull_request:
+
+
 jobs:
   test:
+    name: "Playwright Tests"
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    
     steps:
-    - uses: actions/checkout@v4
-    - uses: pnpm/action-setup@v4
-      with:
-        version: latest
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-        cache: 'pnpm'
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
 
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-      env:
-         DATABASE_URL: ${{ secrets.DATABASE_URL }}
-         BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
-         BETTER_AUTH_URL: ${{ secrets.BETTER_AUTH_URL }}
-         CI: true
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Install Vercel CLI
+        run: pnpm install -g vercel@latest
+
+      - name: Run Playwright tests
+        run: npx playwright test
+        env:
+          POSTGRES_URL: ${{ secrets.DATABASE_URL }}
+          BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
+          BETTER_AUTH_URL: ${{ secrets.BETTER_AUTH_URL }}
+          CI: true
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
+      - name: Deploy playwright report to Vercel
+        if: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          cd playwright-report
+          vercel link --project playwright-reports --yes --token=${{ secrets.VERCEL_TOKEN }}
+          vercel deploy --yes --token=${{ secrets.VERCEL_TOKEN }}
